--- a/Quiz/style.css
+++ b/Quiz/style.css
@@ -1,53 +1,69 @@
-*{
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+* {
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
-body{
-    background-color:#b8c6db;
-    background-image: linear-gradient(315deg,#b8c6db 0%,#f5f7fa 74%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    min-height: 100vh;
+body {
+  background-color: #b8c6db;
+  background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
+  min-height: 100vh;
 }
-.main-container{
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow:0 0 10px 5px rgba(0, 0, 0, 0.1);
-    width: 400px;
+.main-container {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+  width: 400px;
 }
-.quiz-container{
-    padding:2rem;
-
+.quiz-container {
+  padding: 2rem;
 }
-ul{
-    list-style-type: none;
-    padding: 0;
+ul {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
-h2{
-    padding: 1rem;
-    text-align: center;
-    margin: 0;
-}
-ul li{
-    font-size:1.2rem;
-    margin: 0;
-}
-ul li label{
-    cursor: pointer;
+h2 {
+  padding: 1rem;
+  text-align: center;
+  margin: 0;
 }
 
-button{
-    background-color: #8e44ad;
-    border:none;
-    color: white;
-    display: block;
-    width: 100%;
-    font-size: 1.5rem;
-    font-family: inherit;
-    padding: 1.3rem;
+ul li {
+  font-size: 1.2rem;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
-button:hover{
-    background-color: black;
+ul li label {
+  cursor: pointer;
+}
+input[type="radio"] {
+  width: 20px;
+  height: 15px;
+}
+button {
+  background-color: #8e44ad;
+  border: none;
+  color: white;
+  display: block;
+  width: 100%;
+  font-size: 1.5rem;
+  font-family: inherit;
+  padding: 1.3rem;
+  transition: all 0.5s ease-in;
+}
+button:hover {
+  background-color: black;
+}
+#black {
+  background-color: black;
 }
